// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Alert story renders snapshot 1`] = `
<div
  class="toastDialog colorAlert"
>
  <div
    class="content"
  >
    <div
      class="iconContainer iconAlert"
    >
      <svg
        class="icon"
        fill="currentColor"
        role="img"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="2"
        >
          alert
        </title>
        <use
          xlink:href="test-file-stub#dangerous"
        />
      </svg>
    </div>
    <p
      class="text text--sm text--inherit"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> NotDismissable story renders snapshot 1`] = `
<div
  class="toastDialog colorSuccess"
>
  <div
    class="content"
  >
    <div
      class="iconContainer iconSuccess"
    >
      <svg
        class="icon"
        fill="currentColor"
        role="img"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="3"
        >
          success
        </title>
        <use
          xlink:href="test-file-stub#check-circle"
        />
      </svg>
    </div>
    <p
      class="text text--sm text--inherit"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> Success story renders snapshot 1`] = `
<div
  class="toastDialog colorSuccess"
>
  <div
    class="content"
  >
    <div
      class="iconContainer iconSuccess"
    >
      <svg
        class="icon"
        fill="currentColor"
        role="img"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="1"
        >
          success
        </title>
        <use
          xlink:href="test-file-stub#check-circle"
        />
      </svg>
    </div>
    <p
      class="text text--sm text--inherit"
    >
      You've got toast!
    </p>
  </div>
</div>
`;
